Added and centered a div

--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+
+/*Essential for each file to avoid calculating pixels*/
+* {
+    box-sizing: border-box;
+}
+
 .colour{
     background-color: rgb(16, 243, 50);
     text-align: left;
